@@ -45,7 +45,7 @@
 
 typedef struct am_conf_t {
     int allowed_set;
-    apr_int64_t allowed;
+    ap_method_mask_t allowed;
 } am_conf_t;
 
 module AP_MODULE_DECLARE_DATA allowmethods_module;
