@@ -1,6 +1,11 @@
                                                          -*- coding: utf-8 -*-
 Changes with Apache 2.5.1
 
+  *) core: ap_method_mask_t type added for method bitmasks, changed
+     from apr_int64_t and used for the method_mask field in
+     ap_method_list_t, AP_METHOD_BIT, allowed field of request_rec,
+     limited field of cmd_parms.  [Joe Orton]
+
   *) mod_ssl: Do not keep connections to OCSP responders alive when doing
      OCSP requests.  PR 64135.  [Ruediger Pluem]
 
